# CMakeClrTests

./: CMakeLists.txt  CMakeProject1.cpp  CMakeSettings.json  Header.h  NewFile.h  clrClass.h  nativeClass.h
